sas-core/main/default/objects/Threat_Incident__c/Threat_Incident__c.object-meta.xml
<CustomObject>
    <description>Threat incident</description>
    <label>Threat Incident</label>
    <nameField>
        <displayFormat>TIA-{00000000}</displayFormat>
        <label>Threat Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Threat Incidents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>