sas-core/main/default/objects/Threat_Incident__c/fields/Accent__c.field-meta.xml
<CustomField>
    <fullName>Accent__c</fullName>
    <label>Accent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Dialect</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>Slang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>