sas-core/main/default/objects/Threat_Incident__c/fields/Aircraft_Flight_or_Building_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Flight_or_Building_Knowledge__c</fullName>
    <inlineHelpText>Did it seem as if the person knows about the aircraft/flight or building based on the description of where the bomb is placed?</inlineHelpText>
    <label>Aircraft/flight or building knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>