sas-core/main/default/objects/Threat_Incident__c/fields/Attitude__c.field-meta.xml
<CustomField>
    <fullName>Attitude__c</fullName>
    <label>Attitude</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calm</fullName>
            </value>
            <value>
                <fullName>Angry</fullName>
            </value>
            <value>
                <fullName>Sensible</fullName>
            </value>
            <value>
                <fullName>Irritated</fullName>
            </value>
            <value>
                <fullName>Vulgar</fullName>
            </value>
            <value>
                <fullName>Consistent</fullName>
            </value>
            <value>
                <fullName>Inconsistent</fullName>
            </value>
            <value>
                <fullName>Emotional</fullName>
            </value>
            <value>
                <fullName>Sad</fullName>
            </value>
            <value>
                <fullName>Happy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>