sas-core/main/default/objects/Threat_Incident__c/fields/Background_Noise__c.field-meta.xml
<CustomField>
    <fullName>Background_Noise__c</fullName>
    <label>Background noise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silent</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Voices</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Aircraft</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Party</fullName>
            </value>
            <value>
                <fullName>Pub</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>