sas-core/main/default/objects/Threat_Incident__c/fields/Caller_Approx_Age__c.field-meta.xml
<CustomField>
    <fullName>Caller_Approx_Age__c</fullName>
    <label>Approximate age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>