sas-core/main/default/objects/Threat_Incident__c/fields/Caller_Email__c.field-meta.xml
<CustomField>
    <fullName>Caller_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>