sas-core/main/default/objects/Threat_Incident__c/fields/Caller_EuroBonus_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_EuroBonus_Number__c</fullName>
    <label>Caller&apos;s EuroBonus Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>