sas-core/main/default/objects/Threat_Incident__c/fields/Caller_Identity__c.field-meta.xml
<CustomField>
    <fullName>Caller_Identity__c</fullName>
    <label>Caller&apos;s Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Man</fullName>
            </value>
            <value>
                <fullName>Woman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>