sas-core/main/default/objects/Threat_Incident__c/fields/Caller_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Name__c</fullName>
    <label>Who are you?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>