sas-core/main/default/objects/Threat_Incident__c/fields/Caller_Phone__c.field-meta.xml
<CustomField>
    <fullName>Caller_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>