sas-core/main/default/objects/Threat_Incident__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <inlineHelpText>Date and time when the threat was received</inlineHelpText>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>