sas-core/main/default/objects/Threat_Incident__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>50</length>
    <type>Text</type>
</CustomField>