sas-core/main/default/objects/Threat_Incident__c/fields/Destination_Email2__c.field-meta.xml
<CustomField>
    <fullName>Destination_Email2__c</fullName>
    <description>Email address two for reporting threat incidents</description>
    <label>Destination Email2</label>
    <type>Email</type>
</CustomField>