sas-core/main/default/objects/Threat_Incident__c/fields/Destination_Email3__c.field-meta.xml
<CustomField>
    <fullName>Destination_Email3__c</fullName>
    <description>Email Address three for sending Threat Incidents</description>
    <label>Destination Email3</label>
    <type>Email</type>
</CustomField>