sas-core/main/default/objects/Threat_Incident__c/fields/Destination_Email4__c.field-meta.xml
<CustomField>
    <fullName>Destination_Email4__c</fullName>
    <description>Email Address four for sending Threat Incidents</description>
    <label>Destination Email4</label>
    <type>Email</type>
</CustomField>