sas-core/main/default/objects/Threat_Incident__c/fields/During_Flight__c.field-meta.xml
<CustomField>
    <fullName>During_Flight__c</fullName>
    <label>During the flight?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>