sas-core/main/default/objects/Threat_Incident__c/fields/Explosive_Device_Description__c.field-meta.xml
<CustomField>
    <fullName>Explosive_Device_Description__c</fullName>
    <inlineHelpText>If you cannot find a description matching what the bomb looks like, please describe it in &quot;Why are you doing this? &quot; field</inlineHelpText>
    <label>If it is a bomb, what does it look like?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Briefcase</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Suitcase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>