sas-core/main/default/objects/Threat_Incident__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>