sas-core/main/default/objects/Threat_Incident__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>