sas-core/main/default/objects/Threat_Incident__c/fields/Language_Ability__c.field-meta.xml
<CustomField>
    <fullName>Language_Ability__c</fullName>
    <label>Language ability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Adequate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>