sas-core/main/default/objects/Threat_Incident__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>