sas-core/main/default/objects/Threat_Incident__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>