sas-core/main/default/objects/Threat_Incident__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <inlineHelpText>Other details that you want to add</inlineHelpText>
    <label>Other details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>