sas-core/main/default/objects/Threat_Incident__c/fields/Speech__c.field-meta.xml
<CustomField>
    <fullName>Speech__c</fullName>
    <label>Speech</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast</fullName>
            </value>
            <value>
                <fullName>Slow</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Distorted</fullName>
            </value>
            <value>
                <fullName>Nasal</fullName>
            </value>
            <value>
                <fullName>Slurred</fullName>
            </value>
            <value>
                <fullName>Stuttering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>