sas-core/main/default/objects/Threat_Incident__c/fields/Threat_Details__c.field-meta.xml
<CustomField>
    <fullName>Threat_Details__c</fullName>
    <inlineHelpText>Provide any relevant addition details about the threat</inlineHelpText>
    <label>Details about threat</label>
    <type>TextArea</type>
</CustomField>