sas-core/main/default/objects/Threat_Incident__c/fields/Threat_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Threat_Execution_Time__c</fullName>
    <label>When shall it take place?</label>
    <type>DateTime</type>
</CustomField>