sas-core/main/default/objects/Threat_Incident__c/fields/Threat_Location__c.field-meta.xml
<CustomField>
    <fullName>Threat_Location__c</fullName>
    <label>Where will the threat take place?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>On board</fullName>
            </value>
            <value>
                <fullName>Cargo area</fullName>
            </value>
            <value>
                <fullName>SAS facilities</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>