sas-core/main/default/objects/Threat_Incident__c/fields/Threat_Origin__c.field-meta.xml
<CustomField>
    <fullName>Threat_Origin__c</fullName>
    <inlineHelpText>The channel where the threat was received</inlineHelpText>
    <label>Threat origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Chat/Messenger</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SoMe</fullName>
            </value>
            <value>
                <fullName>Web form</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>