sas-core/main/default/objects/Threat_Incident__c/fields/Threat_Reason__c.field-meta.xml
<CustomField>
    <fullName>Threat_Reason__c</fullName>
    <label>Why are you doing this?</label>
    <type>TextArea</type>
</CustomField>