sas-core/main/default/objects/Threat_Incident__c/fields/Threat_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Threat_Receiver__c</fullName>
    <inlineHelpText>Person who received the threat.</inlineHelpText>
    <label>Threat received by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>