sas-core/main/default/objects/Threat_Incident__c/fields/Threat_Type__c.field-meta.xml
<CustomField>
    <fullName>Threat_Type__c</fullName>
    <label>What kind of threat?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bomb</fullName>
            </value>
            <value>
                <fullName>Violence against staff</fullName>
            </value>
            <value>
                <fullName>Shooting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>