sas-core/main/default/objects/Threat_Incident__c/fields/ThreatCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>ThreatCaseNumber__c</fullName>
    <label>Salesforce Case Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>