sas-core/main/default/objects/Threat_Incident__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>