sas-core/main/default/objects/Threat_Incident__c/fields/Transgressor__c.field-meta.xml
<CustomField>
    <fullName>Transgressor__c</fullName>
    <label>Who are you?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>