sas-core/main/default/objects/Threat_Incident__c/fields/Transgressor_Location__c.field-meta.xml
<CustomField>
    <fullName>Transgressor_Location__c</fullName>
    <label>Where you are at?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>