sas-core/main/default/objects/Threat_Incident__c/fields/Voice_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Voice_Characteristics__c</fullName>
    <label>Voice characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loud</fullName>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
            <value>
                <fullName>Shrill</fullName>
            </value>
            <value>
                <fullName>Sombre</fullName>
            </value>
            <value>
                <fullName>Intoxicated</fullName>
            </value>
            <value>
                <fullName>Pleasant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>